--- a/public/index.html
+++ b/public/index.html
@@ -52,24 +52,23 @@
 
 		<div class="container grey">
 			<div class="wrapper">
-				<h2>What is Novlr and why is it the best way to write a novel?</h2>
-				<p>We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. We want to make it the easiest place to do it. Writing a novel is hard enough. Why spend time worrying about: </p>
+				<h3>Some people like to say, "There's a novel in everyone". There isn't. Most people don't have the patience, perseverance and dedication required to write a book. But you do. So we'll take care of the formatting, backups, word counts etc and you can concentrate on the words.</h3>
 			</div>
 		</div>
 		<div class="container">
 			<div class="wrapper">
-				<div class="product_example"><h2>Here are your tools</h2><img src="images/nov-wireTM.jpg"></div>
+				<div class="product_example"><img src="images/nov-wireTM.jpg"></div>
 				<div class="promoblock">
-					<h3>Automatically saves drafts</h3>
-					<p>No need to hit save. We've felt the pain of a lost chapter, cursing Word and the energy company for their combined disinterest in the powercut that made you lose your work.</p>
+					<h3>You won't lose work. Ever.</h3>
+					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time, without you even needing to think about it. </p>
 				</div>
 				<div class="promoblock">
-					<h3>Access anywhere, any device</h3>
-					<p>Have a moment of genius whilst runing to the bus? An idea as you're waiting for a friend? Access from phone, tablet and desktop.</p>
+					<h3>Your novel is always with you.</h3>
+					<p>Come up with a plot twist while at work? Novlr is accessible from any browser so don't let the day job get in the way. That spreadsheet can wait.</p>
 				</div>
 				<div class="promoblock">
-					<h3>Making things better</h3>		
-					<p>Novlr makes your writing experience better, making the writing process better, helping you do things better. Together we're making writing better. </p>
+					<h3>What would help you write?</h3>		
+					<p>We're here to solve your problems. What frustrates you when writing? We've got lots of ideas but tell us what's important to you and we'll make it happen.</p>
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -81,7 +80,7 @@
 		</div>
 		<div class="container">
 			<div class="wrapper">
-				<p>Hopefully you like what you see. We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
+				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 				<a href="/feedback">Feedback welcome and encouraged!</a></br></br>
 				<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit onwhite"><span>Get your invite</span></div></a>
 			</div>
