--- a/public/features.html
+++ b/public/features.html
@@ -45,14 +45,14 @@
 					</div>
 				</div>
 			</header>
-			<h1 class="typing"></h1>
+			<h1>Just concentrate on the words.</h1>
 			<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit"><span>Get your invite</span></div></a>
 		</div>
 
 		<div class="container grey">
 			<div class="wrapper">
 				<h2>Novlr makes novel writing simple</h2>
-				<p>We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. We want to make it the easiest place to do it. Writing a novel is hard enough. Why spend time worrying about: </p>
+				<p>We have tried writing novels on all sorts of different platforms and just felt none of them did it well enough. So, we're trying to do it better. </p>
 			</div>
 		</div>
 		<div class="container leftalign">
@@ -79,7 +79,7 @@
 				</div>
 				<div class="features6">
 					<h2>Find it hard to keep motivated? Let us help.</h2>
-					<p>Sometimes we all need a bit of carrot or stick ot get words on the page. Set yourself word count targets and setup reminder emails. We'll also celebrate each goal you achieve with you (maybe even with animated gifs).</p><img>
+					<p>Sometimes we all need a bit of carrot or stick to get words on the page. Set yourself word count targets and setup reminder emails. We'll also celebrate each goal you achieve with you (maybe even with animated gifs).</p><img>
 				</div>
 				<div class="features7">
 					<h2>Needing a second opinion? Just ask.</h2>
