--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</header>
-			<h1 class="typing"></h1>
+			<h1>What would help you write better?</h1>
 			<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit"><span>Get your invite</span></div></a>
 		</div>
 
@@ -64,9 +64,9 @@
 					<li>Secure, stable backend with regular backups</li>
 					<li>Chapters</li>
 					<li>Perpetual saving</li>
-					<li>Export to to .doc and .pdf</li>
-					<li>Real time word count for chapter and novel</li>
-					<li>Reorder chapters</li>
+					<li>Export to .doc and .pdf</li>
+					<li>Real time word counts for chapters and novel</li>
+					<li>Reorder your chapters</li>
 					<li>Tablet-friendly</li>
 				</ul>
 				<h3>Release 2: The bonus feature round</h3>
