--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -51,34 +51,36 @@
 
 		<div class="container grey">
 			<div class="wrapper">
-				<h2>Novlr have big plans. We want you to be a part of them</h2>
-				<p>Novlr is just starting out and you will be able to say you were there right a the beginning of that journey. Once the first beta release is out for testing we will be in constant development mode. Continually improving and updating Novlr based on what you, its users, tell us.</p>
+				<h2>Novlr have big plans. Help us shape them.</h2>
+				<p>Novlr is just starting out and you will be able to say you were there right at the beginning of that journey. Once the first beta release is out for testing we will be in constant development mode. Continually improving and updating Novlr based on what you, its users, tell us.</p>
 			</div>
 		</div>
 		<div class="container leftalign">
 			<div class="wrapper">
-				<h3>Beta launch</h3>
-				<p>Our first release! We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features</p>
+				<h3>Robinson Crusoe Release</h3>
+				<p>Our first release, so named after the first novel in English (this caused controversy here at Novlr so there'll be a blog soon about that). We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features:</p>
 				<ul>
-					<li>Simple, beautiful editing interface</li>
+					<li>A simple, beautiful editing interface</li>
 					<li>Secure, stable backend with regular backups</li>
-					<li>Chapters</li>
+					<li>Chapters (we know that sounds obvious but try using Google Drive)</li>
 					<li>Perpetual saving</li>
-					<li>Export to .doc and .pdf</li>
 					<li>Real time word counts for chapters and novel</li>
-					<li>Reorder your chapters</li>
+					<li>Reordering of chapters</li>
 					<li>Tablet-friendly</li>
+					<li>Export to .doc and .pdf</li>
 				</ul>
-				<h3>Release 2: The bonus feature round</h3>
+				<h3>Release 2: (Unnamed so far: favourite second novel? best novel with number 2 in the title?)</h3>
 				<p>In this release we will be looking at getting you some extra features that help making writing easier. Including the following but this is open to what you tell us you want. Novlr is your writing tool.<p>
 				<ul>
-					<li>Motivational tools</li>
+					<li>Let you make notes and comments on your novel</li>
+					<li>Ways of keeping you motivated</li>
 					<li>Character profiles</li>
-					<li>Accounts settings</li>
-					<li>Search capabilities</li>
+					<li>Tag chapters with characters, locations and themes</li>
+					<li>Account settings</li>
+					<li>Quick search of whole novel</li>
 				</ul>
 				<h3>Future releases</h3>
-				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, tagging chapters for quick reference tools, notes/ideas, exporting to ebook, narrative/plot tools, version tools (eg. draft, final, finalFINAL, definitelyfinalFINAL3)</p>
+				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, quick reference tools, narrative arc tools, exporting to ebook, versioning (eg. draft, final, finalFINAL, definitelyfinalFINAL3)</p>
 			</div>
 		</div>
 		<div class="container grey">
