--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -57,7 +57,7 @@
 		</div>
 		<div class="container leftalign">
 			<div class="wrapper">
-				<h3>Robinson Crusoe Release</h3>
+				<h3>Release 1: Robinson Crusoe Release</h3>
 				<p>Our first release, so named after the first novel in English (this caused controversy here at Novlr so there'll be a blog soon about that). We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features:</p>
 				<ul>
 					<li>A simple, beautiful editing interface</li>
@@ -69,6 +69,7 @@
 					<li>Tablet-friendly</li>
 					<li>Export to .doc and .pdf</li>
 				</ul>
+				<br>
 				<h3>Release 2: (Unnamed so far: favourite second novel? best novel with number 2 in the title?)</h3>
 				<p>In this release we will be looking at getting you some extra features that help making writing easier. Including the following but this is open to what you tell us you want. Novlr is your writing tool.<p>
 				<ul>
@@ -79,6 +80,7 @@
 					<li>Account settings</li>
 					<li>Quick search of whole novel</li>
 				</ul>
+				<br>
 				<h3>Future releases</h3>
 				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, quick reference tools, narrative arc tools, exporting to ebook, versioning (eg. draft, final, finalFINAL, definitelyfinalFINAL3)</p>
 			</div>
