--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="./js/analytics.js"></script>
 		<script src="./js/typed.js"></script>	
-		<script src="./js/texttyped.js"></script>
+		<!-- <script src="./js/texttyped.js"></script> -->
 			
 	</head>
 	<body>
@@ -27,7 +27,7 @@
   			});
   			</script>
   			
-  		<script>
+  		<!-- <script>
   			$(function(){
       			$(".texttyping").texttyped({
         		strings: ["It makes it so nice to write you won't be able to stop yourself, it's a bit like heroin I suppose."],
@@ -50,7 +50,7 @@
         		callback: function(){ } // call function after typing is done
       			});
   			});
-  			</script>
+  			</script> -->
   	
 		<div class="fullimagewrap">
 			<header>
