removing surplus texttyped

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
 		<link rel="icon" type="image/png" href="./images/novlricondark.png">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="./js/analytics.js"></script>
-		<script src="./js/typed.js"></script>	
-		<script src="./js/texttyped.js"></script>
+		<script src="./js/typed.js"></script>
 			
 	</head>
 	<body>
@@ -29,7 +28,7 @@
   			
   		<script>
   			$(function(){
-      			$(".texttyping").texttyped({
+      			$(".texttyping").typed({
         		strings: ["It makes it so nice to write you won't be able to stop yourself, it's a bit like heroin I suppose."],
         		typeSpeed: 40, // typing speed
         		backDelay: 50000, // pause before backspacing
@@ -41,7 +40,7 @@
   			</script>
   		<script>	
   			$(function(){
-      			$(".texttypingtwo").texttyped({
+      			$(".texttypingtwo").typed({
         		strings: ["keeps your novel safe, so even you can’t lose it"],
         		typeSpeed: 40, // typing speed
         		backDelay: 50000, // pause before backspacing
