--- a/public/index.html
+++ b/public/index.html
@@ -29,23 +29,10 @@
   		<script>
   			$(function(){
       			$(".texttyping").typed({
-        		strings: ["It makes it so nice to write you won't be able to stop yourself, it's a bit like heroin I suppose."],
+        		strings: ["Novlr makes it so nice to write you won't be able to stop yourself, it's a bit like heroin really. Novlr keeps your novel safe, so even you can'' lose it. Novlr takes care of the boring bits so you can, well, take care of the boring bits. Novlr will make your mum prouder of you. Novlr will make you feel great when, you know, you're actually achieving something. Novlr will point out your failings in an 'I'm not angry, just disappointed' type way. Novlr will make you more attractive - we promise. Novlr... ok I think you get the point...Novlr gives you no excuses."],
         		typeSpeed: 40, // typing speed
-        		backDelay: 50000, // pause before backspacing
-        		loop: true, // loop on or off (true or false)
-        		loopCount: 1, // number of loops, false = infinite
-        		callback: function(){ } // call function after typing is done
-      			});
-  			});
-  			</script>
-  		<script>	
-  			$(function(){
-      			$(".texttypingtwo").typed({
-        		strings: ["keeps your novel safe, so even you can’t lose it"],
-        		typeSpeed: 40, // typing speed
-        		backDelay: 50000, // pause before backspacing
-        		loop: true, // loop on or off (true or false)
-        		loopCount: 1, // number of loops, false = infinite
+        		backDelay: 50, // pause before backspacing
+        		loop: false, // loop on or off (true or false)
         		callback: function(){ } // call function after typing is done
       			});
   			});
@@ -85,8 +72,8 @@
 		</div>
 		<div class="container">
 			<div class="wrapper">
-				<h3>Why Novlr?</h3>
-				<div class="product_example"><span class="texttyping"></span><br></div>
+				<h3 class="tablethide">Why Novlr?</h3>
+				<div class="product_example tablethide"><span class="texttyping"></span><br></div>
 				<div class="promoblock">
 					<h3>You won't lose work. Ever.</h3>
 					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time, without you even needing to think about it. </p>
