--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -45,6 +45,7 @@
 					</div>
 				</div>
 			</header>
+			<div class="clear"></div>
 			<h1>What would help you write better?</h1>
 			<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit"><span>Get your invite</span></div></a>
 		</div>
