changing feedback link and aligning issues

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<script src="./js/typed.js"></script>
 			
 	</head>
-	<body>
+	<body class="home">
 		<script>
   			$(function(){
       			$(".typing").typed({
