--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -89,7 +89,7 @@
 		<div class="container grey">
 			<div class="wrapper">
 				<p>Hopefully you like what you see. We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
-				<a href="/feedback">Feedback welcome and encouraged!</a></br></br>
+				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
 				<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit onwhite"><span>Get your invite</span></div></a>
 			</div>
 		</div>
