--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -59,7 +59,7 @@
 		<div class="container leftalign">
 			<div class="wrapper">
 				<h3>Release 1: Robinson Crusoe Release</h3>
-				<p>Our first release, so named after the first novel in English (this caused controversy here at Novlr so there'll be a blog soon about that). We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features:</p>
+				<p>Our first release, so named after the first novel in English (this <a href="http://blog.novlr.org/the-first-novel-controversy-naming-our-first-release/">caused controversy here at Novlr</a> so there'll be a blog soon about that). We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features:</p>
 				<ul>
 					<li>A simple, beautiful editing interface</li>
 					<li>Secure, stable backend with regular backups</li>
