Features page updates

--- a/public/features.html
+++ b/public/features.html
@@ -58,35 +58,43 @@
 		</div>
 		<div class="container leftalign">
 			<div class="wrapper">
-				<div class="feature1">
+				<div class="feature 1">
+					<img src="../images/novlr-features-images-1.png" alt="Clean simple interface" title="Clean simple interface">
 					<h2>Find it difficult to focus? Not anymore.</h2>
 					<p>Novlr will put the focus on your words, stripping back the options and giving you a nice clean space to write. It'll just feel nice to write on it.</p><img>
 				</div>
-				<div class="feature2">
+				<div class="feature 2">
+					<img src="../images/novlr-features-images-2.png" alt="Constant saving" title="Constant saving">
 					<h2>You won't lose work. Ever.</h2>
 					<p>Novlr will save your work every couple of seconds so you don't even have to think about it. No more of the nightmares we all recognise.</p><img>
 				</div>
-				<div class="feature3">
+				<div class="feature 3">
+					<img src="../images/novlr-features-images-3.png" alt="Cross-device compatible" title="Cross-device compatible">
 					<h2>Forgot your laptop? Not a problem</h2>
 					<p>Novlr is web based, so you can access it from any computer, tablet, or phone with internet access. You don't need to carry it with you anymore.</p><img>
 				</div>
-				<div class="feature4">
+				<div class="feature 4">
+					<img src="../images/novlr-features-images-4.png" alt="Chapter organisation" title="Chapter organisation">
 					<h2>Keep changing your mind? Change is good.</h2>
 					<p>It takes a long time to get a novel right. We're making chapter organisation simple so you can change things around easily, and quickly add new ones.</p><img>
 				</div>
-				<div class="feature5">
+				<div class="feature 5">
+					<img src="../images/novlr-features-images-5.png" alt="Character profiles" title="Character profiles">
 					<h2>Bring your characters to life. They deserve it.</h2>
 					<p>No change in circumstances can repair a defect in character. So said Ralph Waldo Emerson. Novlr agrees and we're giving each character a profile page: take notes; upload images and videos: give them a back story.</p><img>
 				</div>
-				<div class="features6">
+				<div class="feature 6">
+					<img src="../images/novlr-features-images-7.png" alt="Motivational tools" title="Motivational tools">
 					<h2>Find it hard to keep motivated? Let us help.</h2>
 					<p>Sometimes we all need a bit of carrot or stick to get words on the page. Set yourself word count targets and setup reminder emails. We'll also celebrate each goal you achieve with you (maybe even with animated gifs).</p><img>
 				</div>
-				<div class="features7">
+				<div class="feature 7">
+					<img src="../images/novlr-features-images-soon.png" alt="Sharing and collaboration" title="Sharing and collaboration">
 					<h2>Needing a second opinion? Just ask.</h2>
 					<p>It can be tempting to keep your words close to your chest, but feedback is so valuable. Share chapters, or your whole book, with friends and let them comment directly.</p><img>
 				</div>
-				<div class="features8">
+				<div class="feature 8">
+					<img src="../images/novlr-features-images-8.png" alt="Export your work to multiple formats" title="Export your work to multiple formats">
 					<h2>Hate it when you get locked in? So do we.</h2>
 					<p>We want you to use Novlr because it's the best tool, not because we've locked you in. So, you'll be able to export your work at any time into a range of formats - Word, Pdf etc.</p>
 				</div>
