--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,24 @@
 			<div class="clear"></div>
 			<h1>How's that novel of yours coming?</h1>
 			<h2 id="secondsentence">Now there's no excuse.</h2>
-			<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit"><span>Get your invite</span></div></a>
+			<div id="inviteform">
+				<!-- Begin MailChimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+				<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+</style>
+				<div id="mc_embed_signup">
+<form action="http://novlr.us3.list-manage1.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=1bd56c2691" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_1bd56c2691" value=""></div>
+	<div class="clear"><input type="submit" value="Get your invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+</form>
+</div>
+
+				<!--End mc_embed_signup-->
+				
+    		</div>
 		</div>
 
 		<div class="container grey">
@@ -71,23 +88,34 @@
 				<p>Some people like to say, "There's a novel in everyone". There isn't. Most people don't have the patience and dedication required to write a book.<br><br><span> But you do.</span><br> <br>So we'll take care of the formatting, backups, word counts etc and you can concentrate on the words.</p>
 			</div>
 		</div>
-		<div class="container">
+	
+	
+	<div class="container">
 			<div class="wrapper">
-				<h3 class="tablethide">Why Novlr?</h3>
+				<div class="novlrimage">
+					<img src="/images/nov-wireTM.jpg">
+				</div>
+			<!-- 		<h3 class="tablethide">Why Novlr?</h3>
 				<span id="wordcount"></span>
 				<div class="product_example tablethide"><span class="texttyping" id="words"></span><br></div>
 				<script type='text/javascript'>var count = document.getElementById('words').innerHTML.split(' ').length; document.getElementById('wordcount').innerHTML=count;</script>
+	
+	-->
 				<div class="promoblock">
 					<h3>You won't lose work. Ever.</h3>
-					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time, without you even needing to think about it. </p>
+					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time. You don't need to think about it.</p>
 				</div>
 				<div class="promoblock">
 					<h3>Your novel is always with you.</h3>
-					<p>Come up with a plot twist while at work? Novlr is accessible from any browser so don't let the day job get in the way. That spreadsheet can wait.</p>
+					<p>If you've got the internet, you've got Novlr. Your phone, a computer at work, your mum's ipad, that dodgy internet cafe - they all work.</p>
 				</div>
 				<div class="promoblock">
-					<h3>What would help you write?</h3>		
-					<p>We're here to solve your problems. What frustrates you when writing? We've got lots of ideas but tell us what's important to you and we'll make it happen.</p>
+					<h3>Challenge yourself</h3>
+					<p>Set yourself a goal. Then once you've finished that doodle of a pigeon, set yourself a writing goal. Track your progress and celebrate wins.</p>
+				</div>
+				<div class="promoblock">
+					<h3>Tell us what you need...</h3>		
+					<p>We're here to solve writing problems. What frustrates you? We've got lots of ideas but <a href="http://blog.novlr.org/we-like-feedback/">tell us what's important</a> and we'll make it happen.</p>
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -101,7 +129,23 @@
 			<div class="wrapper">
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
-				<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit onwhite"><span>Get your invite</span></div></a>
+					<div id="inviteformtwo">
+						<!-- Begin MailChimp Signup Form -->
+						<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+						<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+</style>
+						<div id="mc_embed_signup">
+							<form action="http://novlr.us3.list-manage1.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=1bd56c2691" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_1bd56c2691" value=""></div>
+	<div class="clear"><input type="submit" value="Get your invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+</form>
+						</div>
+						<!--End mc_embed_signup-->
+				
+    				</div>
 			</div>
 		</div>
 			<footer>
