--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -47,7 +47,24 @@
 			</header>
 			<div class="clear"></div>
 			<h1>What would help you write better?</h1>
-			<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit"><span>Get your invite</span></div></a>
+				<div id="inviteform">
+				<!-- Begin MailChimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+				<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+</style>
+				<div id="mc_embed_signup">
+<form action="http://novlr.us3.list-manage1.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=1bd56c2691" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_1bd56c2691" value=""></div>
+	<div class="clear"><input type="submit" value="Get your invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+</form>
+</div>
+
+				<!--End mc_embed_signup-->
+				
+    			</div>
 		</div>
 
 		<div class="container grey">
@@ -86,11 +103,27 @@
 				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, quick reference tools, narrative arc tools, exporting to ebook, versioning (eg. draft, final, finalFINAL, definitelyfinalFINAL3)</p>
 			</div>
 		</div>
-		<div class="container grey">
+		<div class="container grey featurespage">
 			<div class="wrapper">
 				<p>Hopefully you like what you see. We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
-				<a href="http://blog.novlr.org/be-the-first-to-try-novlr/"><div class="tryit onwhite"><span>Get your invite</span></div></a>
+					<div id="inviteformtwo">
+						<!-- Begin MailChimp Signup Form -->
+						<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+						<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+</style>
+						<div id="mc_embed_signup">
+							<form action="http://novlr.us3.list-manage1.com/subscribe/post?u=b83ac6880baafd2a2a94d4242&amp;id=1bd56c2691" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_1bd56c2691" value=""></div>
+	<div class="clear"><input type="submit" value="Get your invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+</form>
+						</div>
+						<!--End mc_embed_signup-->
+				
+    				</div>
 			</div>
 		</div>
 			<footer>
