--- a/public/features.html
+++ b/public/features.html
@@ -124,7 +124,7 @@
 						<ul>
 							<li><a href="https://plus.google.com/111202096464040188835"><img src="./images/google+.png" alt="Follow Novlr on Google+" title="Follow Novlr on Google+" target="blank"></a></li>
 							<li><a href="http://facebook.com/novlr"><img src="./images/facebook.png" alt="Follow Novlr on Facebook" title="Follow Novlr on Facebook" target="blank"></a></li>
-							<li><a href="http://twitter.com/mynovlr"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
+							<li><a href="http://twitter.com/novlrtweets"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
 						</ul>
 					</div>
 			</footer>
