updating the Roadmap

--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -15,7 +15,7 @@
 		<script>
   			$(function(){
       			$(".typing").typed({
-        		strings: ["What do you want Novlr to build?"],
+        		strings: ["Novlr have big plans. Help us shape them."],
         		typeSpeed: 40, // typing speed
         		backDelay: 500, // pause before backspacing
         		loop: false,
@@ -46,7 +46,7 @@
 				</div>
 			</header>
 			<div class="clear"></div>
-			<h1>What would help you write better?</h1>
+			<h1>Novlr have big plans. Help us shape them.</h1>
 				<div id="inviteform">
 				<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -69,38 +69,46 @@
 
 		<div class="container grey">
 			<div class="wrapper">
-				<h2>Novlr have big plans. Help us shape them.</h2>
-				<p>Novlr is just starting out and you will be able to say you were there right at the beginning of that journey. Once the first beta release is out for testing we will be in constant development mode. Continually improving and updating Novlr based on what you, its users, tell us.</p>
+				<h2>Beta is on it's way! Check out what's in the pipeline</h2>
+				<p>Novlr is just starting out and you will be able to say you were there right at the beginning of that journey. Once the first beta release is out for testing we will be in constant development mode. Continually improving and updating Novlr based on what you, its users, <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">tell us</a>.</p>
 			</div>
 		</div>
 		<div class="container leftalign">
 			<div class="wrapper">
-				<h3>Release 1: Robinson Crusoe Release</h3>
-				<p>Our first release, so named after the first novel in English (this <a href="http://blog.novlr.org/the-first-novel-controversy-naming-our-first-release/">caused controversy here at Novlr</a> so there'll be a blog soon about that). We want to get a simple working version of Novlr out to you as soon as possible. It will have the following features:</p>
+				<h3>Release 0: Beta</h3>
+				<p>We are aiming to release Beta this July! The beta is a test version of a site, a first draft if you well and we will be releasing ours to those that <a href="#mce-EMAIL"></a>sign up</p> probably in rolling groups of around 50 in order to manage the feedback! For more about beta, read <a href="http://blog.novlr.org/all-about-beta/">Kim's blog about it.</a></p>
 				<ul>
 					<li>A simple, beautiful editing interface</li>
 					<li>Secure, stable backend with regular backups</li>
+					<li>Simple formatting</li>
 					<li>Chapters (we know that sounds obvious but try using Google Drive)</li>
-					<li>Perpetual saving</li>
-					<li>Real time word counts for chapters and novel</li>
+					<li><a href="http://blog.novlr.org/you-never-have-to-hit-save-again/">Perpetual saving</a></li>
+					<li>Real time word counts for chapters</li>
 					<li>Reordering of chapters</li>
 					<li>Tablet-friendly</li>
-					<li>Export to .doc and .pdf</li>
+					<li>Export options</li>
+				</ul>
+				<br>
+				<h3>Release 1: Robinson Crusoe Release</h3>
+				<p>Our first release, so named after the first novel in English (this <a href="http://blog.novlr.org/the-first-novel-controversy-naming-our-first-release/">caused controversy here at Novlr</a> so there'll be a blog soon about that). We want to get a simple working version of Novlr out to everyone as soon as possible. It will build on top of beta with <a href="blog.novlr.org/all-about-beta">features that you decide</a> but we are considering:</p>
+				<ul>
+					<li>Tagging chapters</li>
+					<li>Additional formatting (based on what you guys ask for)</li>
+					<li>Quick search of whole novel</li>
 				</ul>
 				<br>
 				<h3>Release 2: (Unnamed so far: favourite second novel? best novel with number 2 in the title?)</h3>
 				<p>In this release we will be looking at getting you some extra features that help making writing easier. Including the following but this is open to what you tell us you want. Novlr is your writing tool.<p>
 				<ul>
 					<li>Let you make notes and comments on your novel</li>
-					<li>Ways of keeping you motivated</li>
+					<li>Ways of keeping you motivated (setting goals, reminders, rewards etc.)</li>
 					<li>Character profiles</li>
 					<li>Tag chapters with characters, locations and themes</li>
 					<li>Account settings</li>
-					<li>Quick search of whole novel</li>
 				</ul>
 				<br>
 				<h3>Future releases</h3>
-				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, quick reference tools, narrative arc tools, exporting to ebook, versioning (eg. draft, final, finalFINAL, definitelyfinalFINAL3)</p>
+				<p>Future releases will be planned as they get nearer. We have big ideas for Novlr including offline editing, multiple novels, editor collaboration and sharing, quick reference tools, narrative arc tools, exporting to ebook, versioning (eg. draft, final, finalFINAL, definitelyfinalFINAL3) but the future of Novlr is in your hands - <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">tell us what you want.</a></p>
 			</div>
 		</div>
 		<div class="container grey featurespage">
