--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -76,13 +76,13 @@
 		<div class="container leftalign">
 			<div class="wrapper">
 				<h3>Release 0: Beta</h3>
-				<p>We are aiming to release Beta this July! The beta is a test version of a site, a first draft if you well and we will be releasing ours to those that <a href="#mce-EMAIL"></a>sign up</p> probably in rolling groups of around 50 in order to manage the feedback! For more about beta, read <a href="http://blog.novlr.org/all-about-beta/">Kim's blog about it.</a></p>
+				<p>We are aiming to release Beta this July! The beta is a test version of a site, a first draft if you will, and we will be releasing ours to those that <a href="#mce-EMAIL">sign up</a> probably in rolling groups of around 50 in order to manage the feedback! For more about beta, read <a href="http://blog.novlr.org/all-about-beta/">Kim's blog about it.</a></p>
 				<ul>
 					<li>A simple, beautiful editing interface</li>
 					<li>Secure, stable backend with regular backups</li>
 					<li>Simple formatting</li>
 					<li>Chapters (we know that sounds obvious but try using Google Drive)</li>
-					<li><a href="http://blog.novlr.org/you-never-have-to-hit-save-again/">Perpetual saving</a></li>
+					<li>Perpetual saving</li>
 					<li>Real time word counts for chapters</li>
 					<li>Reordering of chapters</li>
 					<li>Tablet-friendly</li>
