adding login to footer

--- a/public/index.html
+++ b/public/index.html
@@ -151,12 +151,13 @@
 		</div>
 			<footer>
 				<div class="social">
-						<ul>
-							<li><a href="https://plus.google.com/111202096464040188835"><img src="./images/google+.png" alt="Follow Novlr on Google+" title="Follow Novlr on Google+" target="blank"></a></li>
-							<li><a href="http://facebook.com/novlr"><img src="./images/facebook.png" alt="Follow Novlr on Facebook" title="Follow Novlr on Facebook" target="blank"></a></li>
-							<li><a href="http://twitter.com/novlrtweets"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
-						</ul>
-					</div>
+					<ul>
+						<li><a href="https://plus.google.com/111202096464040188835"><img src="./images/google+.png" alt="Follow Novlr on Google+" title="Follow Novlr on Google+" target="blank"></a></li>
+						<li><a href="http://facebook.com/novlr"><img src="./images/facebook.png" alt="Follow Novlr on Facebook" title="Follow Novlr on Facebook" target="blank"></a></li>
+						<li><a href="http://twitter.com/novlrtweets"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
+					</ul>
+				</div>
+				<div class="login"><a href="http://beta.novlr.org/" class="button">Log in to beta</a></div>
 			</footer>
 	</body>
 </html>
