--- a/public/features.html
+++ b/public/features.html
@@ -127,6 +127,7 @@
 							<li><a href="http://twitter.com/novlrtweets"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
 						</ul>
 					</div>
+				<div class="login"><a href="http://beta.novlr.org/" class="button">Log in to beta</a></div>
 			</footer>
 	</body>
 </html>
