--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Novlr | Free online novel writing software</title>
+		<title>Novlr | Online novel writing software - free trial</title>
+		<meta name="description" content="How’s that novel of yours coming along? Now there’s no excuse. Novel writing. Simply.">
 		<link rel="stylesheet" href="./css/default.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oxygen:300,400,700">
