--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Roadmap | Novlr</title>
+		<title>Roadmap | Novlr - online novel writing software - free trial</title>
+		<meta name="description" content="How’s that novel of yours coming along? Now there’s no excuse. Novel writing. Simply.">
 		<link rel="stylesheet" href="./css/default.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oxygen:300,400,700">
@@ -142,6 +143,7 @@
 							<li><a href="http://twitter.com/novlrtweets"><img src="./images/twitter.png" alt="Follow Novlr on Twitter" title="Follow Novlr on Twitter" target="blank"></a></li>
 						</ul>
 					</div>
+				<div class="login"><a href="http://beta.novlr.org/" class="button">Log in to beta</a></div>
 			</footer>
 	</body>
 </html>
