changing buttons texts

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
     				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Tell me when Novlr is ready" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+					<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 					</form>
 				</div>
 
@@ -141,7 +141,7 @@
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
 		    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-							<div class="clear"><input type="submit" value="Tell me when Novlr is ready" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+							<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 							</form>
 						</div>
 
