--- a/public/features.html
+++ b/public/features.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Features | Novlr</title>
+		<title>Features | Novlr - online novel writing software - free trial</title>
+		<meta name="description" content="How’s that novel of yours coming along? Now there’s no excuse. Novel writing. Simply.">
 		<link rel="stylesheet" href="./css/default.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oxygen:300,400,700">
@@ -58,7 +59,7 @@
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
     				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Tell me when Novlr is ready" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+					<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 					</form>
 				</div>
 
